Link visibility adjustment, category selection bug fix

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -44,7 +44,7 @@ h5 {
 	border-radius: 5px;
 	color: white;
 	a {
-		color: rgba(51, 122, 183, 1.0);
+		color: rgba(101, 172, 233, 1.0);
 	}
 }
 
